minor align fix

--- a/proyectos_javascript/proyecto_js_05/style.css
+++ b/proyectos_javascript/proyecto_js_05/style.css
@@ -10,6 +10,8 @@ body {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    align-items: center;
+    align-content: center;
 }
 
 h1 {
@@ -70,4 +72,9 @@ li p {
     margin: 0;
     padding: 15px;
     width: 100%;
+}
+
+#lista {
+    list-style: none;
+    padding: 0;
 }
